discussion/kv_engine/176659/176659_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Wait for memory to reduce before setting new quota

Change-Id: I0d707b894fa6b7218340c3a86fa93e8f61a80a7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-28 19:06:05.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 20:27:05.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17554/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/bucket_quota_change_task.cc b/engines/ep/src/bucket_quota_change_task.cc
index 723aeeacb..3970d26ea 100644
--- a/engines/ep/src/bucket_quota_change_task.cc
+++ b/engines/ep/src/bucket_quota_change_task.cc
@@ -46,9 +46,9 @@ bool BucketQuotaChangeTask::run() {
         if (!setNewQuotaIfMemoryUsageAcceptable(changeState.desiredQuota)) {
             quotaChangeState.state = ChangeState::WaitingForMemoryReclamation;
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
-//            wakeUp();
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
+            //            wakeUp();
             EP_LOG_CRITICAL_RAW(&quot;starting to wait&quot;);
         }
 
@@ -56,9 +56,9 @@ bool BucketQuotaChangeTask::run() {
     case ChangeState::WaitingForMemoryReclamation:
         if (!setNewQuotaIfMemoryUsageAcceptable(changeState.desiredQuota)) {
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
-//            wakeUp();
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
+            //            wakeUp();
             EP_LOG_CRITICAL_RAW(&quot;waiting&quot;);
             break;
         }
diff --git a/engines/ep/tests/module_tests/bucket_quota_change_test.cc b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
index a33fc44bc..3f3969140 100644
--- a/engines/ep/tests/module_tests/bucket_quota_change_test.cc
+++ b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
@@ -316,7 +316,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
     }
 
     // Poke the item and the pager setting to ensure that we will evict it
-    store-&gt;getVBucket(vbid)-&gt;ht.findOnlyCommitted(key)
+    store-&gt;getVBucket(vbid)
+            -&gt;ht.findOnlyCommitted(key)
             .storedValue-&gt;setFreqCounterValue(0);
     engine-&gt;getConfiguration().setItemEvictionAgePercentage(0);
     engine-&gt;getConfiguration().setItemEvictionFreqCounterAgeThreshold(255);
@@ -354,8 +355,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
 
     if (STParameterizedBucketTest::isMagma()) {
         // Allow magma 10 seconds to reduce memory.
-        auto timeout = std::chrono::steady_clock::now() +
-                std::chrono::seconds(10);
+        auto timeout =
+                std::chrono::steady_clock::now() + std::chrono::seconds(10);
         while (engine-&gt;getEpStats().getMaxDataSize() != newQuota) {
             if (timeout &lt; std::chrono::steady_clock::now()) {
                 // We waited too long for magma to reduce memory usage. Either

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17554/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47165/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
(29 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47165/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18406/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18406/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18406/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39622/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39622/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39622/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28667/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-28T19:29:05.694Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-28T19:29:05.694Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-28T19:29:05.694Z] (177 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28667/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8077/ : FAILURE

Compile error at [2022-06-28T19:23:29.781Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:31:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8077/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8177/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-28T19:30:13.797Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-28T19:30:13.797Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-28T19:30:13.797Z] (44 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8177/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20631/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...2022-06-28T19:24:16.530015+00:00 CRITICAL (default) used:1115176 wat:80
[2022-06-28T19:24:25.858Z] 2022-06-28T19:24:16.530116+00:00 CRITICAL (default) starting to wait
[2022-06-28T19:24:25.858Z] ../kv_engine/engines/ep/tests/ep_testsuite_basic.cc:119 Test failed: `" (Expected `100", got `1000000" - Incorrect smaller size.)
[2022-06-28T19:24:25.858Z] (118 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20631/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19501/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...2022-06-28T20:59:16.048467+01:00 CRITICAL (default) used:1139808 wat:80
[2022-06-28T19:59:36.825Z] 2022-06-28T20:59:16.048547+01:00 CRITICAL (default) starting to wait
[2022-06-28T19:59:36.825Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite_basic.cc:119 Test failed: `" (Expected `100", got `1000000" - Incorrect smaller size.)
[2022-06-28T19:59:36.825Z] (186 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19501/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21275/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-28T19:27:45.704Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-28T19:27:45.704Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-28T19:27:45.704Z] (779 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21275/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20285/ : FAILURE

Compile error at [2022-06-28T19:19:31.591Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore_config.h:17:10:
fatal error: libmagma/magma.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20285/ )
----------------------------------------------------------------------------------------------------------------------
